# CVDL_23_project_HuBMAP

./: .gitignore  README.md  fct.py  fct_trial.ipynb  image.pt  pyproject.toml  requirements.txt  target.pt
configs/DUCKNet/: ducknet_channel_weight_bce_dice_128_20.pt  ducknet_diceBCE_128_20.pt  ducknet_dice_128_20.pt  ducknet_focal_128_20.pt  ducknet_pretrained_focal_128_20.pt
configs/DUCKNetPretrained/: ducknet_pretrained34_focal_128_20.pt  ducknet_pretrained_channel_weight_bce_dice_128_20.pt  ducknet_pretrained_cross_entropy_128_20.pt  ducknet_pretrained_cross_entropy_256_20.pt  ducknet_pretrained_diceBCE_128_20.pt  ducknet_pretrained_dice_128_20.pt
configs/DUCKNetPretrained34/: ducknet_pretrained34_dice_128_20.pt
configs/DUCKNetPretrained_256/: ducknet_pretrained_channel_weight_bce_dice_256_20.pt  ducknet_pretrained_dice_256_20.pt  ducknet_pretrained_focal_256_20.pt
configs/DUCKNet_LR1e4/: ducknet_dice_128_20_lr_1e4.pt  ducknet_pretrained_dice_128_20_lr_1e4.pt
configs/DUCKNet_final_test/: ducknet_pretrained34_channel_weight_bce_dice_128_20.pt  ducknet_pretrained34_focal_128_20.pt
configs/DUCKNet_old/: ducknet_pretrained34_channel_weight_bce_dice_128_20.pt  ducknet_pretrained_channel_weight_bce_dice_128_20.pt  ducknet_pretrained_channel_weight_bce_dice_256_20.pt
configs/TransResUNet/: pretrained_resnet101_trial_0.pt  pretrained_resnet152_trial_0.pt  pretrained_resnet50_trial_0.pt  pretrained_resnext101_32x8d_trial_0.pt  pretrained_resnext50_32x4d_trial_0.pt  wide_resnet101_2_trial_0.pt  (+2 more)
figures/: visualization.ipynb
hubmap/: dpt_experiments.ipynb
(+125 files in other folders)
