[tool.poetry]
name = "hubmap"
version = "0.0.1"
description = "HuBMAP - Hacking the Human Vasculature Segment instances of microvascular structures from healthy human kidney tissue slides."
authors = ["Jonas Blenninger <jonas@blenninger.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scienceplots = "^2.1.0"
numpy = "^1.24.3"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
